--- a/Pippu-Contract/foundry.toml
+++ b/Pippu-Contract/foundry.toml
@@ -2,5 +2,14 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.20"
+optimizer = true
+optimizer_runs = 200
+via_ir = true
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+# Base Sepolia Configuration
+[rpc_endpoints]
+base_sepolia = "${BASE_SEPOLIA_RPC_URL}"
+
+[etherscan]
+base_sepolia = { key = "${ETHERSCAN_API_KEY}" }
