--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@tanstack/react-query": "^5.90.5",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
@@ -51,6 +52,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "pino-pretty": "^13.1.2",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
